--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "ClipBoard+",
   "version": "1.0.0",
   "description": "Smart clipboard manager with history, pinning, and drag-and-drop support for text and images",
+
   "permissions": [
     "clipboardRead",
     "clipboardWrite",
@@ -10,12 +11,16 @@
     "contextMenus",
     "tabs"
   ],
+
   "host_permissions": [
     "<all_urls>"
   ],
+
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "scripts": ["background.js"]
   },
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -24,6 +29,7 @@
       "all_frames": false
     }
   ],
+
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
@@ -32,15 +38,28 @@
       "128": "icons/icon128.png"
     }
   },
+
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
+
   "web_accessible_resources": [
     {
       "resources": ["dashboard/dashboard.html"],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "clipboardplus@example.com",
+      "strict_min_version": "109.0",
+      "data_collection_permissions":{
+        "required": ["none"],
+        "optional": []
+      }
+    }
+  }
 }
